--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,12 @@ repositories {
     mavenCentral()
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"
-    }
+        }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
+    implementation 'dev.arbjerg:lavaplayer:2.2.2'
     implementation "dev.kord:kord-core:0.15.0"
     implementation "org.slf4j:slf4j-api:2.0.7"
     implementation 'ch.qos.logback:logback-classic:1.5.15'
