--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ buildscript {
 }
 
 plugins {
-
     id 'org.jetbrains.kotlin.jvm' version '2.0.0'
     id 'application'
     id 'java'
 }
+
+apply plugin: 'java'
+apply plugin: 'kotlin'
+apply plugin: 'application'
 
 group = 'dev.shaper.rypolixy'
 version = '1.0-SNAPSHOT'
@@ -34,8 +37,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.fusesource.jansi:jansi:2.4.0'
     implementation 'dev.arbjerg:lavaplayer:2.2.2'
     implementation "dev.kord:kord-core:0.15.0"
+    implementation "dev.kord:kord-voice:0.15.0"
     implementation "org.slf4j:slf4j-api:2.0.7"
     implementation 'ch.qos.logback:logback-classic:1.5.15'
     implementation "io.github.oshai:kotlin-logging-jvm:7.0.3"
@@ -61,5 +66,6 @@ jar {
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
+
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
